# NekoCurrencies

./: .env.example  .gitignore  .semgrepignore  AGENTS.md  AUTO_UPDATE_GUIDE.md  CHANGELOG.md  CURRENCIES.ru.md  DEVELOPMENT_GUIDE.md  LAUNCH_GUIDE.md  MATH_EXAMPLES.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATION.ru.md  QUICK_START.md  README-ru.md  README-uv.md  README.md  README.ru.md  UPDATE_SUMMARY.md  WARP.md  benchmark.py  benchmark_results.json  bot.py  bot_monitor.py  config.py  currency_service.py  database.py  debug_currency.py  env_example_correct.txt  file_hashes.json  keyboards.py  localization.py  math_parser.py  performance_optimizer.py  pyproject.toml  requirements.txt  simple_test.py  start_bot.py  test_conversion.py  test_full_process.py  test_keepalive.py  (+3 more)
.cursor/rules/: codacy.mdc
data/: users.db-shm  users.db-wal
docs/: CURRENCIES.md  DEVELOPMENT_GUIDE.md  MATH_EXAMPLES.en.md  README-ru.md
tests/: test_currency_service.py  test_database.py  test_math_parser.py
