[project]
name = "nekocurrencies"
version = "1.0.0"
description = "Telegram bot for currency conversion"
authors = [
    {name = "aneek0", email = "aneek0@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiogram>=3.22.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "num2words>=0.5.14",
    "word2number>=1.1",
    "uvloop>=0.22.1; sys_platform != \"win32\"",
    "orjson>=3.11.3; sys_platform != \"win32\"",
    "ujson>=5.11.0",
    "aiofiles>=25.1.0",
    "aiocache>=0.12.3",
    "psutil>=7.1.0",
    "py-cpuinfo>=9.0.0",
    "GitPython>=3.1.45"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "black>=25.9.0",
    "flake8>=7.3.0",
    "mypy>=1.18.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
